objects/Handwrytten__hndwrtObjAccount__c.object
<CustomObject>
    <fields>
        <fullName>Handwrytten__Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Handwrytten Account. Lookup(User), required field.</description>
        <inlineHelpText>Handwrytten Account owner</inlineHelpText>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Handwrytten_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Active__c</fullName>
        <formula>NOT(ISPICKVAL( Handwrytten__Status__c , &apos;Inactive&apos;))</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Allow_Deletes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Completed Handwrytten Orders to be deleted.</description>
        <inlineHelpText>Allows completed handwrytten orders to be deleted</inlineHelpText>
        <label>Allow Deletes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Allow_Gift_Cards__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the gift cards feature for the handwrytten account</inlineHelpText>
        <label>Allow Gift Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Required field, Handwrytten account login/user name</description>
        <externalId>true</externalId>
        <inlineHelpText>Handwrytten account login</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__Log_to_Activity_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Handwrytten Orders are logged to the Activity History as completed tasks.</description>
        <inlineHelpText>Log completed handwrytten orders to the activity history as completed tasks</inlineHelpText>
        <label>Log to Activity History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Monthly_Budget_Per_User__c</fullName>
        <inlineHelpText>Total amount the user can spend in a given month</inlineHelpText>
        <label>Monthly Budget Per User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Org_Wide_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Grants all users in the Salesforce.com org access to the account</inlineHelpText>
        <label>Org Wide Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Password_Reenter__c</fullName>
        <inlineHelpText>Please re-enter your password.</inlineHelpText>
        <label>Re-enter Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Setting the handwrytten account to public grants access to all users in the Salesforce.com org to use the account to process orders and modify templates. Please use caution when setting an account to public.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Shared_Account_Budgets__c</fullName>
        <label>Shared Account Budgets</label>
        <summaryFilterItems>
            <field>Handwrytten__hndwrtObjAccountAccess__c.Handwrytten__Maximum_Monthly_Budget__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Handwrytten__hndwrtObjAccountAccess__c.Handwrytten__Handwrytten_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Shared_Account__c</fullName>
        <description>Formula field, indicates an account is shared with other users</description>
        <formula>(Handwrytten__Shared_Count__c - 1 &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the account is shared with other users in the Salesforce.com org</inlineHelpText>
        <label>Shared Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Shared_Count__c</fullName>
        <description>Roll-up Summary field, counts the users that the account is shared with</description>
        <label>Shared Count</label>
        <summaryForeignKey>Handwrytten__hndwrtObjAccountAccess__c.Handwrytten__Handwrytten_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Signup_Code__c</fullName>
        <label>Signup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Unique_Name__c</fullName>
        <description>Unique account nickname, this field is used to ensure the account nickname is unique.</description>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__uid__c</fullName>
        <label>uid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__user_id__c</fullName>
        <label>user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Handwrytten Account</label>
    <nameField>
        <label>Account Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handwrytten Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Handwrytten__VR_Budget_Greater_Zero</fullName>
        <active>true</active>
        <description>Monthly Budget Per User must be greater than zero</description>
        <errorConditionFormula>AND ( 
 NOT ( ISBLANK(Handwrytten__Monthly_Budget_Per_User__c) ),
 Handwrytten__Monthly_Budget_Per_User__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Monthly_Budget_Per_User__c</errorDisplayField>
        <errorMessage>Monthly Budget Per User must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Budget_Org_Wide_Required</fullName>
        <active>true</active>
        <description>Monthly Budget Per User can only be set for an Org Wide Account</description>
        <errorConditionFormula>AND (
 NOT( Handwrytten__Org_Wide_Account__c ),
 NOT ( ISBLANK(Handwrytten__Monthly_Budget_Per_User__c) ),
 Handwrytten__Monthly_Budget_Per_User__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Monthly_Budget_Per_User__c</errorDisplayField>
        <errorMessage>Monthly Budget Per User can only be set for an Org Wide Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Nickname_Required</fullName>
        <active>false</active>
        <description>Account nickname is required.</description>
        <errorConditionFormula>OR (
 ISBLANK(Name),
 ISNULL(Name),
 Name = &apos;&apos;
)</errorConditionFormula>
        <errorMessage>Account nickname is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Password_Required</fullName>
        <active>true</active>
        <description>Password is required.</description>
        <errorConditionFormula>OR (
 ISNULL( Handwrytten__Password__c ), 
 Handwrytten__Password__c = &apos;&apos;
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Password__c</errorDisplayField>
        <errorMessage>Password is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Passwords_Must_Match</fullName>
        <active>true</active>
        <description>Password field must equal re-enter password field.</description>
        <errorConditionFormula>Handwrytten__Password__c !=  Handwrytten__Password_Reenter__c</errorConditionFormula>
        <errorDisplayField>Handwrytten__Password__c</errorDisplayField>
        <errorMessage>Passwords entered must be equal.</errorMessage>
    </validationRules>
</CustomObject>